--- a/portfolio-backend/Cargo.toml
+++ b/portfolio-backend/Cargo.toml
@@ -7,10 +7,10 @@ rust-version = "1.75.0"
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 axum = { version = "0.8", features = ["macros"] }
-serde = { version = "1", features = ["derive"] }
+serde = { version = "=1.0.217", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12", features = ["json"] }
-alloy = { version = "1.1", default-features = false, features = ["providers", "reqwest", "sol-types", "contract"] }
+alloy = { version = "0.9", default-features = false, features = ["providers", "reqwest", "sol-types", "contract"] }
 tower-http = { version = "0.6", features = ["cors"] }
 dotenvy = "0.15"
 chrono = { version = "0.4", features = ["serde"] }
